<resources>
    <string name="app_name">Liveness Signal</string>

    <!-- Default values -->
    <!--<string name="default_server">fng5mhuck2n7l4we2egjnbp6l4cofw46wjyvi7t6s37uhwbcanmylyqd.onion</string>-->

    <!-- Strings related to login -->
    <string name="prompt_server">Liveness Server</string>
    <string name="prompt_app_password">Local App Password</string>
    <string name="prompt_signal_password">Shared Signal Password</string>
    <string name="action_start">Start</string>
    <string name="action_start_short">Start</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_settings">Liveness Settings</string>

    <string name="prompt_info_title">App Authentication</string>
    <string name="prompt_info_subtitle">Please login to get access</string>
    <string name="prompt_info_description">Sample App is using Android biometric authentication</string>
    <string name="prompt_info_use_app_password">Use app password</string>
    <string name="secret_key_name">appPasswordEncryptor</string>

    <!-- Preference Titles -->
    <string name="messages_header">Server settings</string>
    <string name="sync_header">Password settings</string>
    <string name="signal_data_header">Verifier cached data</string>
    <!-- Server Preferences -->
    <string name="server_title">Default server</string>
    <!-- Sync Preferences -->
    <string name="require_appPassword_title">Require app password to log in</string>
    <string name="require_appPassword_on">App password is required to start</string>
    <string name="require_appPassword_off">App password is stored on device</string>
    <string name="appPassword_biometricsLock_title">Lock app with biometrics</string>
    <string name="appPassword_biometricsLock_on">Unlock with on-device biometrics</string>
    <string name="appPassword_biometricsLock_off">Ask app password on every login</string>
    <!-- Verifier Key and Verification Chain Data Preferences -->
    <string name="verifier_max_signals_skip">Max signals to skip</string>
    <!--<string name="verifier_key_data_header">Encrypted key data for verification</string>-->
    <!--<string name="verifier_signal_chain_header">Encrypted key data for verification</string>-->


    <!-- Main Preferences -->
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Check</string>
    <string name="tab_text_2">Send</string>
    <string name="button_settings">Settings</string>
    <string name="button_help">Help/About</string>
    <string name="button_legal">"Legal"</string>


    <!-- Verify fragment -->
    <string name="button_check_signals">Check for signals</string>
    <string name="button_import_data">Import signal data</string>
    <string name="text_check_log_view">Push button to check for signals</string>

    <!-- Send fragment -->
    <!--<string name="text_send_signal">Enter new signal text</string>-->
    <string name="button_send_signal">Send new signal</string>
    <string name="button_sync_data">Sync data to verify</string>
    <string name="image_initial_signal_data_export">QRcode for exporting initial signal data</string>
    <string name="text_send_log_view">Push button to send new signal</string>
</resources>