<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
            app:key="server"
            app:title="@string/server_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="requireAppPassword"
            app:summaryOff="@string/require_appPassword_off"
            app:summaryOn="@string/require_appPassword_on"
            app:title="@string/require_appPassword_title" />

        <SwitchPreferenceCompat
            app:dependency="requireAppPassword"
            app:key="biometricsAppPassword"
            app:summaryOff="@string/appPassword_biometricsLock_off"
            app:summaryOn="@string/appPassword_biometricsLock_on"
            app:title="@string/appPassword_biometricsLock_title" />

    </PreferenceCategory>
    <PreferenceCategory android:title="@string/signal_data_header">

        <!--<EditTextPreference
            android:key="verifier_enc_key_data"
            android:selectAllOnFocus="true"
            android:singleLine="false"
            android:title="@string/verifier_key_data_header"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            android:key="verifier_chain_data"
            android:selectAllOnFocus="true"
            android:singleLine="false"
            android:title="@string/verifier_signal_chain_header"
            app:useSimpleSummaryProvider="true" />-->

        <EditTextPreference
            android:key="verifier_max_signals_skip"
            android:selectAllOnFocus="true"
            android:singleLine="false"
            android:title="@string/verifier_max_signals_skip"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

</PreferenceScreen>